--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ExpoReactNativeApp",
-    "slug": "ExpoReactNativeApp",
+    "name": "expo GPS Logger",
+    "slug": "expo-gps-logger",
     "version": "0.0.0-alpha.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
