--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ExpoReactNativeApp",
+  "name": "expo-gps-logger",
   "version": "0.0.0-alpha.0",
   "description": "",
   "main": "node_modules/expo/AppEntry.js",
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
-    "expo": "~48.0.15",
+    "expo": "~48.0.17",
+    "expo-location": "^15.1.1",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-task-manager": "^11.1.1",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.8",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.21.8",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.0",
     "typescript": "^4.9.4"
   },
