--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-gps-logger",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.1",
   "description": "",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
